Extending the application
* UserItems upsert now works all the way through the project
* Dao module: now handles migrations instead of app
* Common module: DTO models
* GlobalExceptionHandler: can be used to bypass the single model response issue (related to generated API code)
