# common/src/main/kotlin/net/packlister/packlister/model/UserItem.kt
@@ -1,0 +1,11 @@
+package net.packlister.packlister.model
+
+import java.util.UUID
+
+data class UserItem(
+    val id: UUID,
+    val name: String?,
+    val description: String?,
+    val weight: Int?,
+    val publicVisibility: Boolean?
+)
