# gen/api.yml
@@ -24,15 +24,9 @@ paths:
         $ref: '#/components/requestBodies/UserItemsRequestBody'
       responses:
         '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/UserItem'
-        '400':
-          description: Invalid input. Malformed id and so on... *^_^*
+          $ref: '#/components/responses/UserItemsResponse'
+        default:
+          $ref: '#/components/responses/UserItemsResponse'
   /items/batchDelete:
     post:
       tags:
@@ -54,11 +48,9 @@ paths:
               example: [123e4567-e89b-12d3-a456-426614174000, 123e4567-e89b-12d3-a456-426614174001]
       responses:
         '200':
-          description: All items deleted successfully or they did not exist.
-        '400':
-          description: Invalid payload or id format
-        '403':
-          description: Not authorized to delete some item
+          $ref:  '#/components/responses/UserItemsBatchDeleteResponse'
+        default:
+          $ref:  '#/components/responses/UserItemsBatchDeleteResponse'
 components:
   schemas:
     UserItem:
@@ -78,20 +70,59 @@ components:
           description: A longer description of item
           example: Softshell jacket. Two hand pockets, one pocket on inside.
         weight:
-          type: number
+          type: integer
           description: Weight of item in grams. Any conversion or localization must be handled elsewhere.
           example: 320
         public_visibility:
           type: boolean
           description: Controls if the item is visible to other users. Publicly visible items can be found with item search.
           example: true
+    UserItemArray:
+      type: array
+      items:
+        $ref: '#/components/schemas/UserItem'
+    APIError:
+      type: object
+      properties:
+        message:
+          type: string
+    APIErrorArray:
+      type: array
+      items:
+        $ref: '#/components/schemas/APIError'
+    ErrorWrapper:
+      type: object
+      properties:
+        errors:
+          $ref: '#/components/schemas/APIErrorArray'
+    UserItemsResponse:
+      type: object
+      properties:
+        userItems:
+          $ref: '#/components/schemas/UserItemArray'
+        errors:
+          $ref: '#/components/schemas/APIErrorArray'
   requestBodies:
     UserItemsRequestBody:
-      description: Array of user item objects.
+      description: Object containing a list of user items.
       required: true
       content:
         application/json:
           schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/UserItem'
+            type: object
+            properties:
+              userItems:
+                $ref: '#/components/schemas/UserItemArray'
+  responses:
+    UserItemsResponse:
+      description: Object containing list of user items for successful operation, or possible errors for failure.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/UserItemsResponse'
+    UserItemsBatchDeleteResponse:
+      description: Successful case all items deleted successfully or they did not exist. Contains errors only if operation failed.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorWrapper'
